# ChangeLog for dev-vcs/git
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-vcs/git/ChangeLog,v 1.288 2014/10/01 12:54:59 zlogene Exp $

  01 Oct 2014; Mikle Kolyada <zlogene@gentoo.org> git-2.0.4.ebuild:
  ia64 stable wrt bug #519736

  30 Sep 2014; Tobias Klausmann <klausman@gentoo.org> git-2.0.4.ebuild:
  Stable on alpha, bug 519736

  30 Sep 2014; Agostino Sarubbo <ago@gentoo.org> git-2.0.4.ebuild:
  Stable for x86, wrt bug #519736

  30 Sep 2014; Agostino Sarubbo <ago@gentoo.org> git-2.0.4.ebuild:
  Stable for amd64, wrt bug #519736

  30 Sep 2014; Agostino Sarubbo <ago@gentoo.org> git-1.8.5.5.ebuild:
  Stable for ppc64, wrt bug #501662

*git-2.1.1 (20 Sep 2014)

  20 Sep 2014; Lars Wendler <polynomial-c@gentoo.org> -git-2.0.2.ebuild,
  +git-2.1.1.ebuild, -files/git-2.0.0_rc0-optional-cvs.patch:
  Version bump. Removed old.

  13 Sep 2014; Markus Meier <maekke@gentoo.org> git-2.0.4.ebuild:
  arm stable, bug #519736

  06 Sep 2014; Jeroen Roovers <jer@gentoo.org> git-2.0.4.ebuild:
  Stable for HPPA (bug #519736).

  30 Aug 2014; Lars Wendler <polynomial-c@gentoo.org> git-2.0.2.ebuild,
  git-2.0.4.ebuild, git-2.1.0.ebuild, git-9999.ebuild, git-9999-r1.ebuild,
  git-9999-r2.ebuild, git-9999-r3.ebuild:
  Don't install git-remote helpers for bzr and hg anymore (bug #512422). Synced
  live ebuilds with latest release ebuild.

  26 Aug 2014; Lars Wendler <polynomial-c@gentoo.org> git-2.1.0.ebuild:
  Restrict test for >=git-2.1.0. See bug #520270 for details.

  24 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> git-1.8.1.5-r1.ebuild,
  git-1.8.1.5.ebuild, git-1.8.2.1.ebuild, git-1.8.3.2-r1.ebuild,
  git-1.8.4.5.ebuild, git-1.8.5.5.ebuild, git-1.9.3.ebuild, git-2.0.2.ebuild,
  git-2.0.4.ebuild, git-2.1.0.ebuild, git-9999-r1.ebuild, git-9999-r2.ebuild,
  git-9999-r3.ebuild, git-9999.ebuild:
  cvsps-3 is explicitely incompatible with git-cvsimport (bug #450424).
