@@ -24,8 +24,8 @@ DIST git-1.8.4.5.tar.gz 4677738 SHA256 37772b18b8184bb3b746963b8e1047a1205447df6
 DIST git-1.8.5.5.tar.gz 4761469 SHA256 c59268c33d2412af329cb09b10e5348e4001a47e1b948b74ecd9937e0897dbb1 SHA512 8921c76b8826fa706450b64198f377ce7c650f06899c4d8e43f499f2e5ee93940a42f4c3483390e034d4babebbeadb400221ae7614e40731674c309da407bf3c WHIRLPOOL 62e8b3cc7c96ea9c22b88c0e5abebfb8ac7d8b84fcfcc4ca0a19a6ce1e9dbfbb6b8cd1180faedd67440cc88c39b3ca9c992d2251670a335e716f11b574475d30
 DIST git-1.9.3.tar.gz 4846233 SHA256 71bca677efa3b87a060cba1de9e3512e7ab0f09197ef95d648e5280d9a6d1357 SHA512 42a774f0d2b9d0ace9e555b3d12b7a27fabdad407d5d1f342792d56cc1b7d1c9d1f921432238ec1bc61e9fd7f9dba7c5d8bcadea8b05bf73bab8c3b428f17b89 WHIRLPOOL b0cd2a18404af0856972d3ab1bad776b5c3cb5088369e5556aa2293feb6a164ef1af7a79cd4a1d7e20c37795921c05d811f9faebe57e31ea5621cc9990b8e5f3
 DIST git-2.0.4.tar.xz 3435872 SHA256 5c0c60e69e3ad4bc8ece7d82d8a68c4ecca9780a57613bde41b4050831f9c996 SHA512 ee10ad7e44d10a8cd45f3220da5d8ca309cc91ac180917a8e2719e3667bf215e30ad3793f27216e921a3cc5edf10b8a911d008098e2446aaa94ba1acdb49c86b WHIRLPOOL afbac473e85ccd7c4b190df3b6921a223e829f3694ab6a2f134855f5da7d52b69c095e1abf4dc9f282f32f52eb8ac46aa671fb85988c7b09d7075a18f73691f0
-DIST git-2.1.0.tar.xz 3485524 SHA256 8dd712dc1a23929110443816a7eeed5c37c01d8f8c19feaa8b9e40b9845601a7 SHA512 c6cd5b7ac37d231321160047133d526133a2eeb115acf5ca2041e1970622a838da631a07439a07564c9f2f34a74975daf62b45ed0184e493715e8d4f16c2187e WHIRLPOOL 1e27602c6af37930e86a125d01466c28f4cc2167e5b930de5c5b6353b04a2ad61d3227ee3d355162bc00eb7d1e74160a8421d575d32e3eb374237760e9db53e7
 DIST git-2.1.1.tar.xz 3539948 SHA256 66cdbf7c714d71599892dc853a40f09418b3856af953a32c22f6f3e7f41f3030 SHA512 dd26b052d03dac28dd7b35736975b9ddb7aaffc37026d0597e82c860acfd55b74b005b8ebe831aaca1e2d3d9ee7f7cea62fac78cd50fd6620e5ab82fc5f3ddf5 WHIRLPOOL 9b107e69e081b55a834e8d3bf1c83505ffdd1be9fccddbe540dd6d2c3c0d2bc78a659ace7c1a9180664f0ec39471e904aaf342b85aa5232ede06301d260ec925
+DIST git-2.1.2.tar.xz 3541584 SHA256 7b27c8978bccf436f3c2b8c6142f35b236edd34ef7c778b1333166c098c7a18b SHA512 20775b6d146faf2e139d47c31c4bb4465d7838e4450ac9d0e5bc0c40498b204303fae4619126e9c1694d7301a1e0d057a35f3fa6a29d9726f838d7c2679a5735 WHIRLPOOL 89d855601ad6d06fd3c448da648e414383d0806e135722a238638e597b077554a5b8f054fbacf000fd2d185f684e6ca61bf7edcef095594d6639a03cd69d4166
 DIST git-htmldocs-1.8.1.5.tar.gz 2060977 SHA256 108e34217b2668945ca78b36b08ceeb9fe283617fe68b8f181219076bb225de0 SHA512 0b46a95a47df4326633d10295eeb09d41cee78d9c30775f7784690715e3b5d607ff26027f4cd6036f31dfc458ba2757ceb5ed6ea675a863a5dc69d8e5a7b34f5 WHIRLPOOL d273fbee9fb0a68ef3f0d19ba2249481bd15ff69b289e046e975fccda7639102519aa79bff94f6317e6b73cc414128b8b8619fcda1a910b74770b0aba1694d26
 DIST git-htmldocs-1.8.2.1.tar.gz 2093688 SHA256 3f2482089eb345ec7d2ad61ad731c17ea87733b763585b580cf99b17194e0286 SHA512 8e7f25a0b230473f9e9290f61e9ea80a675459eea163ef76e281aa95747f5bc4df2ddb7f9bba9c2b0fb75819cd206f2415ba665bc986a628a07e8da4e5aa6efc WHIRLPOOL 574a01d1e403b25444ac88f66a939fcad1c96025a62f91550f328d400246955e61255dd403f3cf8302b961032f536e394b77228a8434c7b2065b564163f49114
 DIST git-htmldocs-1.8.3.2.tar.gz 2115320 SHA256 805b7fc4399daf9258e8cc28ecc3dd043fdd7f339447f4d84674826916109246 SHA512 0890b60bfa110ca7eaf7aaddbf0aca9574f608addc384cece3c91c8c04ef6397064a0669f3d61d0a65eb120b626ccd85df26f04438ca301f349136cd55e5080a WHIRLPOOL 377c39ac7988a3c1bb6e80333c43878d38fe5eecbb75dcbcbef3c2186842fcc170a552d72be891f1479c336fdd6c5ac1ce1ca2c0adf9a8238bd057f093c3f912
@@ -33,8 +33,8 @@ DIST git-htmldocs-1.8.4.5.tar.gz 2207155 SHA256 ecaaef864b1794301af4af17a4d37896
 DIST git-htmldocs-1.8.5.5.tar.gz 2228410 SHA256 14088e41803a9127946a9f31146d5ac4806d2c6075668bb2833c3af72b32c8ab SHA512 8424f241e32e89e2b7eb0dcfcbf37a74b7f9883b9fcde815be9081a16ab0a3eb150f09d41ab08e01a7980f8151b56313912eed79341c8c31df10ff94ca0efca3 WHIRLPOOL c7e3e769307a23a0f05d764cb957b0854a4f0df8825703aa1b32fb3a0697d30871c4d3a4d41388a1e92b27f46535551117a843bd47a70ee22332612cd2ce8ad8
 DIST git-htmldocs-1.9.3.tar.gz 2243608 SHA256 d23f3f3ccd421706f8805c40ee199fb1d3dda7e6720eb8b260f3dbed20f2536f SHA512 c381f560d5f67f723920ba679665725d377b40e0074ca49826436310f7c64d9c9814ff8a3e98a9d00c0d47e9d9f613ec4ed035d15420b87221fdb17de4ebaf3d WHIRLPOOL 9437271b91b5667fa7a6e979aa86822c1824bcf786a2fad07c0a3cdb1c576bccfe2a098f0e43ebfc66f0dc54cf32443988018ce15f191747b412d200599d0af7
 DIST git-htmldocs-2.0.4.tar.xz 943324 SHA256 0ed51a78743ff1accb9165bf2983fe8ab3bcae62d40692d881f895c7e4672ca0 SHA512 c302b12e124597610a10f1d7e3d22c2f0c4dc5bb122c6846dab210e5ce47bb1079ed0e507d44b4260cc76c633abb550729560bddcd9d7b3c2b6f958536cb5716 WHIRLPOOL 3e0408f690aa8f76225b3b91c9c1d9a8a73312abcb32b52efe448d37318818917366354a5cf41fd1a066555f5d5eb71c1ee98561f31dc1122ff123ba8c899875
-DIST git-htmldocs-2.1.0.tar.xz 956204 SHA256 0ac5818fd26e7e710fd71ecc4d59058807295773d52ed827c72a8eb4a28de509 SHA512 48b39b7379ea822cdc16e17925885cad230d89df8e74dd67f139ab194f82c6fec8dd45afcfd7875e19f71e837fcdda3ff425881ae5455ddd1a4f3068d324d596 WHIRLPOOL 8e75a56b036239d16c6cada3ddad8e2b1e204ebb1fe676acf9fe5bc787d00ac67c82c06d6be9fe21a44ea3589df69f0e2d14ea8dfb5c4799de6e9a745e1a4345
 DIST git-htmldocs-2.1.1.tar.xz 957304 SHA256 5552ac0a7c486b6aa6e214ea691c06ba08f86b037f727f00aefee0124744a423 SHA512 6ab34da996e0667d4a00285ffa59dddab40905d998bcad09bb08af88077c6dbb0bfe01fe405bc9a161feb78e7bc15ddaf72f00a254dccdc521fcaab4aba26300 WHIRLPOOL 3a418bffa2c6e1bef9a086b9118992c9559d582611014c12f065957375f4f69dbc59571e40f4b1018f19f257182cf486b6ccb1268c87bc12ee75c8bc14dbc76a
+DIST git-htmldocs-2.1.2.tar.xz 957744 SHA256 eaf3f92a4fca0babc284d1a928d85d2f5313586ce7f72f71c2684adb304bbfde SHA512 ebffb2772570ada1732172b1c12000d0c2e5335a733d3688d6ec89ff01f4ee0c5c71f81336a49236f84f9841bb3c6909512f1269b3b2c23f4de4483e371bb7ef WHIRLPOOL 2fe595cd666385741d8efc05594134b4ef9b484b21dfcb15f68ab2feb20a1266a6ba7aee6ab7ee73d79323cb5e3d03048d9eabfd8e43f6c51abe67c39c04f52b
 DIST git-manpages-1.8.1.5.tar.gz 528540 SHA256 b171761f13deb738a2464c9d3967c12539067a34d6f2bfa5739a1006786fd24a SHA512 c0106da12ae3beeba3c23e68b37113082d829fe80160c53df51aac207557a2045c662b4d01b5a1cb211e75f9f7629290b7ecf3907b3bdc828820382793414e8e WHIRLPOOL 3da3b254707c06cb069fa462561634a4f5869fadab6ab8a07301eeb0b2244f159415d409d71c5ebceb4a74ef51f645f2f4c9ca19080a84ee370b5787740d08c2
 DIST git-manpages-1.8.2.1.tar.gz 536718 SHA256 1d3bc31d10564d29d0c3a45f98f98a7d936dfcdb1692528bf2fdb2140fe89824 SHA512 a6463c8bc8a23301d89e985b88fa0073c154e126c51a1f7699cd09e79723ed463f46a9cf5dd63f9e2e46ee4111e6154ae86553bd446f5cf76db9fd4e3bff5a1f WHIRLPOOL 8aa3c57475d8cfd7c47019c4eb05c091c76fb0ec5d213942b5a16ee9f6c540111aecb6b754eb98578e9e129d4e8ba941a3bee326a2845b2a098cc30e1109d35d
 DIST git-manpages-1.8.3.2.tar.gz 542769 SHA256 599bc8f6c56986a994a237cfebb53b4fab9051576775e32d0353e0455ab84115 SHA512 42fd781b924355c969ce381aae828f877059472741d7b53b0d1aad53f04c8a27b6b161b5dfc353098370ead73ccb9cdc86ac5374cf02829134f8c4d70bcbb7cf WHIRLPOOL 90226006a35b7b6e644f887981f2725238ff428f572425942701614e14fab5c8c5c602746de93a113d83d9b9c76ea1805a9c7cfa353305b0f817c33976048d77
@@ -42,8 +42,8 @@ DIST git-manpages-1.8.4.5.tar.gz 565177 SHA256 8cf38e3a48425fe74c4a71286633ea895
 DIST git-manpages-1.8.5.5.tar.gz 568976 SHA256 375870364a67e663ee85de30d64a12388c6147ac4a263aed1a447e0e2dffd0b8 SHA512 c07a5ddbe158868a7c94575408c2f8d0cc6fd9d1da95e3ff1b93b140708830a50175f38217eb75456d508f05c9720df93b22bd9f336a2b8edb6812bee5cd4a0b WHIRLPOOL 275b352e40ba3891d1ddcda7ef002528f2ec498af41d3f3ea1638f9baa4f9065973c434b7cb7d731b0a951f7bf5c0bbf582677aab727533cd065c64bfa20d1a0
 DIST git-manpages-1.9.3.tar.gz 571550 SHA256 43bfb09c072ccfe0ed4b0ad30d04c8f34b6af4d2f52cd8dfdb48787cc9c8509d SHA512 3f985a4446e3ce1b8bff356585eb5f33565179517e7ba9ae53fc59399c2e4f3ee8498567ce5282e3ddafe0709e79b80877ee53166986facc1ce348495cbb254a WHIRLPOOL 21e96604e4d6581c34ccf0c1367b706e383c47e45ffe9bfb05e9998c7de45507aa72c3fe95f8fd1d81eced81cea149e6bb393a097fe95d8debbeebfbecde6efd
 DIST git-manpages-2.0.4.tar.xz 358936 SHA256 f9b15d115746b7d0bdc5ff2a46ef5cf02ec1cf9f0d61393285fae68349c6b62b SHA512 78a360c6307338e463a0401a1664694feb0bf5cb6aaaaa4d0f0b812bfca568616fb77268ba395be8cbab8612eb9a7d2f2a9e863fe76667b70f9c0d7e5c75b2cc WHIRLPOOL ce68e29d53d6ae3149cae9880914ef64e5087c980b0c14af67a5fbbc9a9cd58fe605dcfe6686cea891d51d9ee2b3eb53ac22acfcf59cc3593aafe29078b843c6
-DIST git-manpages-2.1.0.tar.xz 361088 SHA256 49407287f914037500837b084adb60065e8f4e279e1460ee78fd70b06b7fd1e5 SHA512 ad5ba305aa464452f424cfda58ed4df63dcd181501a74368f4bfbf8c9d7691775b314922b427daa998ad067fc824665f9d7095a6ace67a4a552f50ca3faeb178 WHIRLPOOL 6a44c179a30df0ab8501bffe8f7ce9627d97ab89b8824e3a805772312d7b711b923ea4f9ff22d53b8450c552183ea6d40deb3bc1ad3cc144eb735d20109d7ff7
 DIST git-manpages-2.1.1.tar.xz 361156 SHA256 110e73463c2393880a88dd9eaabe051bdba0eb0103fcbe270e0b57f4a8320209 SHA512 5f9c866abae5363379ce8dea2d097cc5672e397184f7abf3bdbe93a29bad8c9f62f40ad5eeced672cfef71e4b79a735a51c985fe01ff082e12c75c325fe2556b WHIRLPOOL 699d222f74ad6adddcf55dc14026ef1fe9a15cbcbc0a058a4fa93bb689662aa391066831cc6710d814f4e607eadf7930517863939ad0b27b4581b3b5cc9dead7
+DIST git-manpages-2.1.2.tar.xz 361148 SHA256 3d0cf5c693ff9fff524f6f864e6836eeeb5d232a4c57e431d1b30873fab4facd SHA512 9c3a5e94704c71176988567c35db15518ad03ae8115f482932f20d297dbccb1490c6ae82e09e3af6d7b17f0b4148254fcf1ad47e6ab2b2e4326203801b4626a1 WHIRLPOOL 7b6db2cff2ea706baf38c334d51bcbfacc68550f6d1fa2b2ae2e69e8702993e54f01d206c98ae331beaf3b0ae4916a80d2f4d56661c427afac0015c888e3952d
 EBUILD git-1.8.1.5-r1.ebuild 17196 SHA256 f80028e88054436f4b402bd93ab105f8943171eb27989d6736715387d2b26bab SHA512 b4e8c2e5cfe54b8ac5c5785ee7268fb59c605289507ffdb7ee9c3a8ae860d66004aba64661742728eab57997d29f78929565cc6070c8b0ea6d11022bbd070373 WHIRLPOOL aed233e1a8df2a6eefd0986ae1b52d962fa292a4c1e623783c112446222f44f1004217b6f44c5d5b9bfa4657e4f119b070da6239e8798f1bc635852af00704c8
 EBUILD git-1.8.1.5.ebuild 17055 SHA256 20852b5a39c8528c6abf9d7baff533c457d62d6922c2c989721bc3479dde377e SHA512 b374ec61f8fb73492c861e1e3af58d09c04ffbb320736c7f36499a10c7940e3217ab92701d1c3661302708f7f84c9fc09e65137ba561e247b448b8f50cba151a WHIRLPOOL 2004b046b60ef221b7df04011ab6809b105554b7098f48fbc27317480172ae95f4197fcf171ddac95ca4d8c4915258f72ef1ed90ae881dde387d32d642a96f8a
 EBUILD git-1.8.2.1.ebuild 17512 SHA256 881bdfa6441ead7042888c416544189f9233f6627da1879fbe0d58f3b60aac45 SHA512 92f14398864dfbeebd0667afd00a05c7ae59ace9a4bf743907d058953175f4369ea04848fa838ef02d98f9944da1b33234f032a32cf29890ed4631c00d52ee56 WHIRLPOOL 6670e2b5bbe13929d94fa7712cacdf03dd7f4851113790277d175e4a5cbc23d401c40e8d6eaebc6e26239c3a717a7f7ec7f8cdd6bf160bd5c03547cd50b0c07f
@@ -52,21 +52,29 @@ EBUILD git-1.8.4.5.ebuild 17938 SHA256 bff93f337fa7bfaae36d99ced6712c76e92c2a82d
 EBUILD git-1.8.5.5.ebuild 18442 SHA256 d8f5f29685722c3b17b844f1f4051a74c095d063641c34dd2ce6bdfe79f8cdef SHA512 fcd8521161f8830e5cd3c108bde75b660bf25e59cf3edb7bc871b6031c52338d5c91b36e794ae37d7d4ae780a60e41b2b31f5bc5b24281f2e33cb43e1561f3ec WHIRLPOOL 46362e84f562efe3b27575ece2fa7920e6f5cd0e0bcfb78925902231c0581ee523cb230d40cd408572c6b0a3c008e46b6ef00dee50aa6c06b17afc066eba2a9c
 EBUILD git-1.9.3.ebuild 18400 SHA256 b47f9a4b6dd0ecbb9a59ddb25ab51683ccf977b49c12d226bd7c453e5014d499 SHA512 212a40b06742c3e537b81ca8bb8097b44e4665bed9385b9afc3ebac4b28d8d2554b95756d6aecd27a8d3a55bb25151cd67105274a20b34270eef0fce129d0403 WHIRLPOOL cdc8c30099f9730784f79c6b2c2d171a14188ea21af3bb0681cb2d88ffd160c630b18689de1bb391aaac21081161d210d2dad626cd29f0da794e18a8e165f7b5
 EBUILD git-2.0.4.ebuild 18502 SHA256 74429bed438740d555ee4a7673b69ef789944c4ac72e02035ec3acb112002394 SHA512 6b1b6489de90fe7267669c724564c0cfd488acafe8c07f3c82b68dd1ffbc9c454b393dbac653c1b3362c0e4c251f52e455e6d8a92141844914d8af58327fba9c WHIRLPOOL 32021b0da988f533c3fd2a078136285f44c1d57db6c5f2f4b5312f892898db517f72255fd827206f56c5e76e2db7d1c8ccb53cf3f7f789c6671780529a95901e
-EBUILD git-2.1.0.ebuild 18384 SHA256 5ff098a33c2bc90783001e783ee48d4fe63da6df2f04ea8069eabe2f6e19a78e SHA512 134779decc038a2a18f5c40d7d539e85310627f6335a4504a18a67b78a8722d046a97b0f8d9fbd81fa81cebd47d37899aca0993e01fc93924c471bee8a5ec832 WHIRLPOOL b9672cd750ac3b1a2f78011228a8f7a560610d50a498bcea0495d362b9ba1a11d1e6825d8738549a383ec36e96d16ec4d89a7e5d850e8cd311b14ce85e74f245
 EBUILD git-2.1.1.ebuild 18378 SHA256 0cea1154f47230a64db8ae2423ddc9ebd3af4370867e7579effcb903a9ffa1dd SHA512 fc32d27f71ccb1d6066ba63af1953698b1c95b889bc9df8c69cae8a1d195c45f7dbdd57d0de32de0d7d4451cd97b9e0afcf622d3f428d5159c7a5a78057921c4 WHIRLPOOL 092a7a47ff4a5a501c1afc67b8de7f2a4664b6b0e59d053b48b80c4bc36dce054dcfe7692cbb9c6fc075065c1b0cea4a652670ebeb6fee2f74c0d2ca9969a445
+EBUILD git-2.1.2.ebuild 18378 SHA256 a37df3645e72e04777531f0630dfd825a134ccc5c9c477daad428b7dcef6eae8 SHA512 335d6a458c50faf44dc80ae3786e08321fd56da505a9aa3678fa7279d0bc902274aa693cd4ac7912961313d5d7d9973ecfca05f082c83503559eef8a4684ab03 WHIRLPOOL 357b5c84a68713d7a029ac39ea54d246891c88b15147616fe35f3ac0b76ae873cebece71bf7b2d9a9e129ecfb0a8c78f4000470e12059b91d98c3b470280c99a
 EBUILD git-9999-r1.ebuild 18363 SHA256 ed83da3de5dcdef682bcbd1c78141f554fccad4f2138314b2dc6717f88b09414 SHA512 c512da959b95e0df9047ef93f4c8d19df2e3efbea3fabc267a8b3b2db3e59c71a86b495ad673b8641009b9d11cbcc8d2d09c3ddc4c4a39f18b5df31d7319a9dc WHIRLPOOL 524842b63c8c8f207986ac7db33db5a706bfafdf352b9b96efc2a89b63c74bb864cec65574bb26a323d11a890c2ff29262ae35b3b0381c413385487582771ee7
 EBUILD git-9999-r2.ebuild 18362 SHA256 26c8b4d88faec52a6938b5fe1e43b7a2b722eb495bd8597e41106d29e614d7ec SHA512 dd2edf5d926347086ed641351a479662895469e8ed94105248885a1fd844f50ff592f621dc479d77f0f223907f7e691630572eb63b415cbfac0532c090f8d8f1 WHIRLPOOL 50d2afdbaef31c2484ec5aa7b28d646494d5fd9ab1401e4b0d784901e798da358a62dc23fbfc395889db85fb83894210c6013ff5d4f9ad56c4004c2ac84a9e26
 EBUILD git-9999-r3.ebuild 18360 SHA256 6e6ecba33d89f9ce94810015d1f9638e14081ff067fec8ecb9e0a073b9b944aa SHA512 16f07d13a6bb859c4db67f6caa22e998e556ebc4f9f5287b650b3f3004c1013176ca84478aae8fd25aa47302f83140260cd150725ba789eac42f04c9b930eefa WHIRLPOOL 98c6fe15032e74af21d063c83a3518a7a58ae4bf0cc0a22ca6792896e9395050eb4be29b98a49fbf8a0370efd48aa75de86fea6a481627b7a4256bfc14cde2af
 EBUILD git-9999.ebuild 18362 SHA256 292a797d369aecd50e9a63f56ffafec53cd40dd53da34b16a819c3c685de6080 SHA512 a692155f2258d5aea97580ecd293fbcb8b51048a07b811b3d7cc6cd5df8aa09cf5d823e6fa169873d164549de79e508dc9810b5e650e3363fc1f69bfd0a6bf16 WHIRLPOOL f261d813faed303793e8fe4af3b1d05eae2c967a76320ab5e1ef305f2f0906d9df505800b2eac172f100908aaa312f29a2ab57614de9faa7199f75f047b72bc9
-MISC ChangeLog 19852 SHA256 7262da5ed84f42dfb2bb7dcccc111b096587d6e714f4c7b22ce47d57d4909cc8 SHA512 b701d60313e0b401ce98e66894634fde799cc1628b1c1a3c98b59a8a352520c49bbb7a595fd1d1c6c17e547d08424595b749134c4bba3d1eb863156b76a06e51 WHIRLPOOL 04e55f7a2b8bb6693b9ce5ab82e66b44a934880e2bcfea80dfc3c1325b7d74fcfdc6865bff0ab33989ac3b70e83715ebadc2864fc40b5356355d026987232c1d
+MISC ChangeLog 20007 SHA256 f5149954ed548f1d16fcd2d7da1e670ab7969f8222140feab492012195071d17 SHA512 e56c91dbd05178dc42b8e66633d3124c8fa5bd9ddd48bf03d0eae2ee5f6cb321ba320702b0f2a545c67e1f5809a9200958e4f892a6875ebeff443d9b1b53403b WHIRLPOOL 8b34f1d4d00300acd09e44c81d3d6b0c45f2c086c675f949a3338a04698ade0e92c8abccc72f8195237fef963378f07dc6047bc87d11f7d36eb862458aa942f8
 MISC ChangeLog-2012 94624 SHA256 7c8c313ea4800194191f7255023cabd205e56bb9761e8877dfab3770024b158c SHA512 f19cae0a29e8598e3bb68f1295baa56ff0edf06b2e3a95081ea2f95c4555d63dd6a0bff5a82345b274a1936104a75a69fe7862d7738a7fa2539ec9a7afd6b28f WHIRLPOOL 059ab6c542757c4524cb20cebb3cfa4bfbbe16d3a66da0805fb972d32f91f2a49bee97d1d73acf74d8e2cf3cc7a552371cf66db0580506d4b1a9e05ee52bdea4
 MISC metadata.xml 1877 SHA256 74e93a953d9484c1f5806efc9c80bfa729b4d53415a00168e5ffec255750f7bd SHA512 3ef0d74206f67c27b82cefa40602cd33e432cc0f06ce900766d32f1ebd0a71d6cfa750ae77660531fc61a1117f7959d7df6ec10f439cfa2ee372d54d7ac87c5c WHIRLPOOL b9d97eb6b92a1894d965a5e9fbfbfd0d64625b31318fab2eb11b4dcb331133dbf678f62a7216c12b53a2546fa5d6a07c6240bddfa7784a925eafed602a7ffa75
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iJwEAQEIAAYFAlQr+VsACgkQG9wOWsQutdb3GAQAsvY4H2flRlWTY64E9cCSMbi+
-smJtn9e8/oJcI1W+jmfloxjgywVprCQ8tl3GwgCyt0EVUbUWvSdq+ZtTLNz9zXB5
-ZyM/RILg/L3Q6XOXGbOCNzqXWhyHxy6fIAFZK2J09ueF2tuPgPmivO+iMEgQAcxC
-QnSJy1HzKhI1fgzz7eY=
-=JquB
+iQIcBAEBCAAGBQJULQ7EAAoJEPiazRVxLXTFD0oP/0kKIGfge39kODPxZCKsE1cK
+CqQ5yPZ9MaFGhLc+TfZgvqPVZdXq3T0VOkO7GBIvCrt4Km/VQjHL3fYAk0O4l2Cv
+pfI2EWyRiAAQ0nkD5otx+YgHLyxgKgNlFUWLYMx7uf4wtkp3xWpK22RzXjQuza1E
+3pHxpvvzCFUT8jT98hJz+kCTFesVYKlQvxhXXqoF/1a45wtC+SOPpairULUXI5z6
+Zc6r36ffiymqQzs/hW/7BUZtWRk0Xo8NPxnhVgs/lBNMGHI6yAE9XEO3VWJtPAIG
+iTMHLM2fcdJUlOsi8L6Se663oZ9AFp6J4JER/U+8NF9xh+e7sX816eyqR7WY/NW1
+PJJQc19b1jjWUj6CEUu5eYKh3VGFW3XkZUchzFywKzkk7uQEur09xjSYDqY0FD/c
+sgB/HX7b46dlSxZLnvnsxZo5uYOYJwlt1gKxFHc+BUNaw1rX4QC0HaEGZ+zqyYmh
+yJZXP0Gu1b29sTA/p4RcnIAHcVfmcYTeuNLP8b1rgb8UkftjYurHojJguxABHzpi
+5n+ZysgSmzMg5Ao8EX8ysjUkiMmnkM5J9NPb4K14Ks6iIP5ZAOqcJP5exqeOkAS4
+VowUysYxn63PIwWOCv5C/2jSaEv2NWUQaIBWRs90iH+q3NhEXkoGH4XELNYSuWOi
+zrqvXeVR6M0n/y+rqjj0
+=BGBE
 -----END PGP SIGNATURE-----
