@@ -1,6 +1,12 @@
 # ChangeLog for dev-vcs/git
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-vcs/git/ChangeLog,v 1.288 2014/10/01 12:54:59 zlogene Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-vcs/git/ChangeLog,v 1.289 2014/10/02 08:37:23 polynomial-c Exp $
+
+*git-2.1.2 (02 Oct 2014)
+
+  02 Oct 2014; Lars Wendler <polynomial-c@gentoo.org> -git-2.1.0.ebuild,
+  +git-2.1.2.ebuild:
+  Version bump. Removed old.
 
   01 Oct 2014; Mikle Kolyada <zlogene@gentoo.org> git-2.0.4.ebuild:
   ia64 stable wrt bug #519736
